force-app/main/default/objects/Auction_Participation__c/Auction_Participation__c.object-meta.xml
<CustomObject>
    <label>Auction Participation</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>Auction Participation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Auction Participations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>