force-app/main/default/objects/Auction_Participation__c/fields/Auction__c.field-meta.xml
<CustomField>
    <fullName>Auction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auction</label>
    <referenceTo>Auction__c</referenceTo>
    <relationshipLabel>Auction Participations</relationshipLabel>
    <relationshipName>Auction_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>