force-app/main/default/objects/Auction_Participation__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Auction Participations</relationshipLabel>
    <relationshipName>Auction_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>