force-app/main/default/objects/Auction_Participation__c/fields/Participation_Status__c.field-meta.xml
<CustomField>
    <fullName>Participation_Status__c</fullName>
    <label>Participation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Participated</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>